# conslaws

./: CMakeLists.txt  README.md
config/: plot_efficiency.ini  plot_solution.ini
plot/: plot.py
src/: conslaws.cpp  conslaws.hpp  integrators.hpp  quadrature.hpp  tables.hpp  utils.hpp
test/: CMakeLists.txt  tests.cpp  tests.hpp
